--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
         condition: service_healthy
     volumes:
       - uploads:/app/static
+      - ./alembic/versions:/app/alembic/versions
     ports:
       - "127.0.0.1:8102:8000"
     restart: unless-stopped
